# cerberus-mazduino-dash-canbus

./: .gitignore  HOWTORUN.md  LVGL_EDITOR_GUIDE.md  platformio.ini
desktop_sim/: CMakeLists.txt  build.sh  cerberus_logo_argb.c  cerberus_logo_argb.h  lv_conf.h  main.cpp  mock_data.cpp  mock_data.h
src/: CANHandler.cpp  DataTypes.h  DisplayConfig.cpp  DisplayConfig.h  DisplayManager.cpp  GearDisplay.cpp  GearDisplay.h  GlobalVariables.cpp  LvglDisplay.cpp  LvglDisplay.h  cerberus_logo_565.h  lv_conf.h  main.cpp  mock_data.h  tft_test_main.cpp
ui/: dashboard_ui.c  dashboard_ui.h  dashboard_ui.xml  font_noto_bold_48.c  font_noto_bold_64.c  globals.xml
